# research_project_2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
research_project/: .env.example  __init__.py  __main__.py
